@@ -1,3 +1,9 @@
+Thu Jan 21  20:37:09 GMT 2021 Lee Noar  <lee.noar@sky.com>
+
+	* include/stdint.h: Remove the __STDC_LIMIT_MACROS and
+	__STDC_CONSTANT_MACROS checks to comply with C11/C++11.
+	Submitted by Cameron Cawley.
+
 Sun Nov 22  13:26:08 GMT 2020 Lee Noar  <lee.noar@sky.com>
 
 	* include/paths.h: New header. This header is common on Unix systems,
